<resources>
    <string name="app_name">Guia - BCC</string>
    <!--Valores string das views da tela de login -->
    <string name="txtNome">User name</string>
    <string name="txtSenha">Password</string>
    <string name="textoBtnLogin">Login</string>
    <string name="textoBtnEsqueciSenha">Forgot my password</string>
    <string name="cbLembrarUsuario">remember user</string>

    <!--Textos referentes a tentativa de conexão com o AVA -->
    <string name="dadosUsuarioInvalidos">invalid username or password</string>
    <string name="erroConexao">there was a problem while trying to connect</string>

    <!--Strings referentes a os diálogos de progresso-->
    <string name="avisoDialogoDeProgresso">WARNING:</string>
    <string name="mensagemDialogoDeProgresso">Wait until the data is loaded.</string>

    <!-- Textos do dos fragmentos TabLayout  -->
    <!--Strings referentes à view da tela inicial-->
    <string name="boas_vindas"> Welcome </string>
    <string name="txtProximasAulas">Your next classes are going to be:</string>

    <!--Strings referentes às views da tela avaliações-->
    <string name="txtProxAvaliacao">Next appraisal:</string>
    <string name="txtProfessor">Professor:</string>


    <!--Strings referentes às views da tela Questões-->
    <string name="txtBanco">Questions database</string>
    <string name="txtBancoSub">Access the files available from later semesters</string>
    <string name="txtUltimaAtt">Last update: </string>
    <!--essa string aqui vai mudar quando o professor disponibilizar o código e eu ver como ele
       fez pra mudar a sring de acordo com a quantidade-->
    <string name="txtQtdItensOne">Available items</string>
    <string name="txtQtdItensMore">Available items</string>
    <string name="txtAvaliacaoGeral">General appraisal:</string>
    <string name="txtAvaliacaoOtima">Great</string>
    <string name="txtAvaliacaoBoa">Good</string>
    <string name="txtAvaliacaoRegular">Regular</string>
    <string name="txtAvaliacaoRuim">Bad</string>


    <!-- Strings referentes aos botões das view "frag_selecionar_avaliacao" -->
    <string name="txtBtnAvaliarDisciplina">Appraise subject</string>
    <string name="txtBtnAvliarProfessor">Appraise professor</string>
    <string name="txtBtnVerQuestoesAnteriores">Access questions database</string>
    <string name="txtBtnVoltar">Back</string>
    <string name="lblDescricao">Description:</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_campos_usuario">CamposUsuario</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- Strings referentes às Avaliações-->
    <string name="titulo_tela">Appraisal</string>
    <string name="tipo_avaliacao">Type of appraisal</string>
    <string name="numero_questao">1.</string>
    <string name="pergunta_exemplo">Have the lectures been given according to the schedule?</string>
    <string name="resposta_exemplo">Yes, always.</string>
    <string name="cancelar">Cancel</string>
    <string name="continuar">Continue</string>
    <string name="nenhuma_opcao_selecionada">No answer selected</string>
    <string name="obrigado">Thank you!</string>
    <string name="obg_contribuicao">Your contribuition in very inportant!</string>
    <string name="finalizar">Finalize</string>


    <!--- Strings referentes ao fragmento de detalhe da disciplina -->
    <string name="txtQtdMediaAlunos">Mean quantity of students:</string>
    <string name="txtUltimoSemestre">Last semester taught:</string>
    <string name="txtAvaliacaoProfessores">See individual appraisal of professors</string>
    <string name="palavraAvaliacao">Rating</string>
    <string name="palavraClareza">Clarity</string>
    <string name="palavraDificuldade">Dificulty</string>
    <string name="palavraEsforco">Effort</string>
    <string name="palavraConteudo">Content</string>
    <string name="txtBancoQuestoes">Visualize the content database</string>
</resources>
