<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="368dp"
    android:layout_height="495dp"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">

    <TextView
        android:id="@+id/txt_vw_agradecimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="79dp"
        android:text="@string/obrigado"
        android:textAlignment="center"
        android:textSize="60sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_vw_contexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_vw_agradecimento"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/obg_contribuicao"
        android:textAlignment="center"
        android:textSize="28sp" />

    <Button
        android:id="@+id/btn_finalizar_avaliacao"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_vw_contexto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="91dp"
        android:text="@string/finalizar" />
</RelativeLayout>

