<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:gravity="center_vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="0dp"
        android:fillViewport="true"
        tools:ignore="NotSibling">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top|center_vertical"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_vw_avaliacao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="13dp"
                    android:text="@string/titulo_tela"
                    android:textAlignment="center"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true">

                <TextView
                    android:id="@+id/txt_vw_tipoAvaliacao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/tipo_avaliacao"
                    android:textAlignment="center"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/txt_vw_numPergunta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="13dp"
                    android:layout_marginStart="13dp"
                    android:layout_marginTop="11dp"
                    android:text="@string/numero_questao"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtvw_pergunta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/txt_vw_numPergunta"
                    android:layout_marginLeft="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@+id/txt_vw_numPergunta"
                    android:layout_toRightOf="@+id/txt_vw_numPergunta"
                    android:text="@string/pergunta_exemplo"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/rb_resposta4"
                    android:layout_toLeftOf="@+id/rb_resposta4"
                    android:layout_toStartOf="@+id/rb_resposta4"
                    android:id="@+id/radioGroup">

                    <RadioButton
                        android:id="@+id/rb_resposta1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/rb_resposta4"
                        android:layout_alignStart="@+id/rb_resposta4"
                        android:layout_below="@+id/rb_resposta4"
                        android:layout_marginTop="15dp"
                        android:layout_weight="1"
                        android:text="@string/resposta_exemplo"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/rb_resposta2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/btn_cancelar"
                        android:layout_alignStart="@+id/btn_cancelar"
                        android:layout_below="@+id/rb_resposta4"
                        android:layout_marginTop="12dp"
                        android:layout_weight="1"
                        android:text="@string/resposta_exemplo"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/rb_resposta3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/rb_resposta2"
                        android:layout_alignParentTop="true"
                        android:layout_alignStart="@+id/rb_resposta2"
                        android:layout_marginTop="18dp"
                        android:layout_weight="1"
                        android:text="@string/resposta_exemplo"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <RadioButton
                        android:id="@+id/rb_resposta4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/rb_resposta2"
                        android:layout_alignStart="@+id/rb_resposta2"
                        android:layout_below="@+id/rb_resposta2"
                        android:layout_marginTop="15dp"
                        android:layout_weight="1"
                        android:text="@string/resposta_exemplo"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </RadioGroup>

                <Button
                    android:id="@+id/btn_cancelar"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/radioGroup"
                    android:layout_marginLeft="14dp"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="36dp"
                    android:text="@string/cancelar" />

                <Button
                    android:id="@+id/btn_continuar"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/btn_cancelar"
                    android:layout_alignBottom="@+id/btn_cancelar"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="22dp"
                    android:layout_marginRight="22dp"
                    android:text="@string/continuar" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>